--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -88,6 +88,7 @@ src/slic3r/GUI/Search.cpp
 src/slic3r/GUI/Selection.cpp
 src/slic3r/GUI/SelectMachine.cpp
 src/slic3r/GUI/SendSystemInfoDialog.cpp
+src/slic3r/GUI/SendToPrinter.cpp
 src/slic3r/GUI/BindDialog.cpp
 src/slic3r/GUI/Tab.cpp
 src/slic3r/GUI/Tab.hpp
