--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-18 18:18+0800\n"
+"POT-Creation-Date: 2022-10-18 23:28+0800\n"
 "PO-Revision-Date: 2022-10-17 22:14+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -1240,6 +1240,9 @@ msgstr "设备登录失败"
 msgid "Unknown Failure"
 msgstr "发生错误"
 
+msgid "Please check the printer network connection."
+msgstr "请检查打印机的网络连接。"
+
 msgid "Abnormal print file data. Please slice again"
 msgstr "打印文件数据异常，请重新切片"
 
@@ -1461,6 +1464,19 @@ msgstr "AMS不会在启动时自动读取耗材丝信息。它会使用上次关
 
 msgid "File"
 msgstr "文件"
+
+msgid ""
+"Failed to download the plug-in. Please check your firewall settings and vpn "
+"software, check and retry."
+msgstr "插件下载失败。请检查您的防火墙设置和vpn软件,检查后重试。"
+
+msgid ""
+"Failed to install the plug-in. Please check whether it is blocked or deleted "
+"by anti-virus software."
+msgstr "安装插件失败。请检查是否被杀毒软件屏蔽或删除了。"
+
+msgid "click here to see more info"
+msgstr "点击这里查看更多信息"
 
 msgid "Please home all axes (click "
 msgstr "请先执行回原点（点击"
@@ -1913,6 +1929,12 @@ msgstr "流量"
 
 msgid "Tool"
 msgstr "工具"
+
+msgid "Height: "
+msgstr ""
+
+msgid "Width: "
+msgstr ""
 
 msgid "Speed: "
 msgstr ""
@@ -6845,40 +6867,52 @@ msgid ""
 "3D Scene Operations\n"
 "Did you know how to control view and object/part selection with mouse and "
 "touchpanel in the 3D scene?"
-msgstr "3D场景操作\n如何在3D场景中使用鼠标和触摸面板进行视角控制和对象/部件选择"
+msgstr ""
+"3D场景操作\n"
+"如何在3D场景中使用鼠标和触摸面板进行视角控制和对象/部件选择"
 
 #: resources/data/hints.ini: [hint:Cut Tool]
 msgid ""
 "Cut Tool\n"
 "Did you know that you can cut a model at any angle and position with the "
 "cutting tool?"
-msgstr "切割工具\n您知道吗？您可以使用切割工具以任何角度和位置切割模型。"
+msgstr ""
+"切割工具\n"
+"您知道吗？您可以使用切割工具以任何角度和位置切割模型。"
 
 #: resources/data/hints.ini: [hint:Fix Model]
 msgid ""
 "Fix Model\n"
 "Did you know that you can fix a corrupted 3D model to avoid a lot of slicing "
 "problems?"
-msgstr "修复模型\n您知道吗？您可以修复一个损坏的3D模型以避免诸多切片问题。"
+msgstr ""
+"修复模型\n"
+"您知道吗？您可以修复一个损坏的3D模型以避免诸多切片问题。"
 
 #: resources/data/hints.ini: [hint:Timelapse]
 msgid ""
 "Timelapse\n"
 "Did you know that you can generate a timelapse video during each print?"
-msgstr "延时摄影\n您知道吗？您可以每次打印时生成一段延时摄影。"
+msgstr ""
+"延时摄影\n"
+"您知道吗？您可以每次打印时生成一段延时摄影。"
 
 #: resources/data/hints.ini: [hint:Auto-Arrange]
 msgid ""
 "Auto-Arrange\n"
 "Did you know that you can auto-arrange all objects in your project?"
-msgstr "自动摆盘\n您知道吗？您可以自动排列项目中的所有对象。"
+msgstr ""
+"自动摆盘\n"
+"您知道吗？您可以自动排列项目中的所有对象。"
 
 #: resources/data/hints.ini: [hint:Auto-Orient]
 msgid ""
 "Auto-Orient\n"
 "Did you know that you can rotate objects to an optimal orientation for "
 "printing by a simple click?"
-msgstr "自动朝向\n您知道吗？您只需单击鼠标，即可将对象旋转到适合的打印方向？"
+msgstr ""
+"自动朝向\n"
+"您知道吗？您只需单击鼠标，即可将对象旋转到适合的打印方向？"
 
 #: resources/data/hints.ini: [hint:Lay on Face]
 msgid ""
@@ -6887,7 +6921,8 @@ msgid ""
 "sits on the print bed? Select the \"Place on face\" function or press the "
 "<b>F</b> key."
 msgstr ""
-"放置在面部\n您知道吗？您可以快速指定模型的底面，使其位于打印床上。选择“放置在面部”功能或"
+"放置在面部\n"
+"您知道吗？您可以快速指定模型的底面，使其位于打印床上。选择“放置在面部”功能或"
 "按<b>F</b>键。"
 
 #: resources/data/hints.ini: [hint:Object List]
@@ -6896,7 +6931,8 @@ msgid ""
 "Did you know that you can view all objects/parts in a list and change "
 "settings for each object/part?"
 msgstr ""
-"对象列表\n您知道对象列表吗？您可以在其中的查看所有对象/部件，并更改每个对象/部件的设"
+"对象列表\n"
+"您知道对象列表吗？您可以在其中的查看所有对象/部件，并更改每个对象/部件的设"
 "置。"
 
 #: resources/data/hints.ini: [hint:Simplify Model]
@@ -6906,7 +6942,8 @@ msgid ""
 "Simplify mesh feature? Right-click the model and select Simplify model. Read "
 "more in the documentation."
 msgstr ""
-"简化模型\n您知道吗？您可以使用“简化模型”功能减少模型的三角形数。在模型上单击鼠标右键，"
+"简化模型\n"
+"您知道吗？您可以使用“简化模型”功能减少模型的三角形数。在模型上单击鼠标右键，"
 "然后选择“简化模型”。"
 
 #: resources/data/hints.ini: [hint:Slicing Parameter Table]
@@ -6914,14 +6951,18 @@ msgid ""
 "Slicing Parameter Table\n"
 "Did you know that you can view all objects/parts on a table and change "
 "settings for each object/part?"
-msgstr "参数表格\n您知道吗？您可以参数表格上的所有对象/部件，并更改每个对象/部件的设置。"
+msgstr ""
+"参数表格\n"
+"您知道吗？您可以参数表格上的所有对象/部件，并更改每个对象/部件的设置。"
 
 #: resources/data/hints.ini: [hint:Split to Objects/Parts]
 msgid ""
 "Split to Objects/Parts\n"
 "Did you know that you can split a big object into small ones for easy "
 "colorizing or printing?"
-msgstr "分割成对象/零件\n您知道吗？您可以把一个大对象分割成多个小对象/零件以便着色或打印吗？"
+msgstr ""
+"分割成对象/零件\n"
+"您知道吗？您可以把一个大对象分割成多个小对象/零件以便着色或打印吗？"
 
 #: resources/data/hints.ini: [hint:Subtract a Part]
 msgid ""
@@ -6930,7 +6971,8 @@ msgid ""
 "part modifier? That way you can, for example, create easily resizable holes "
 "directly in Bambu Studio. Read more in the documentation."
 msgstr ""
-"减去部分几何体\n您知道吗？您可以使用负零件从另一个几何体中减去另一个几何体。例如，这样可以直"
+"减去部分几何体\n"
+"您知道吗？您可以使用负零件从另一个几何体中减去另一个几何体。例如，这样可以直"
 "接在Bambu Studio中创建可轻松调整大小的孔。"
 
 #: resources/data/hints.ini: [hint:STEP]
@@ -6941,7 +6983,8 @@ msgid ""
 "Bambu Studio supports slicing STEP files, providing smoother results than a "
 "lower resolution STL. Give it a try!"
 msgstr ""
-"STEP文件\n您知道吗？通过切片STEP文件而不是STL文件可以提高打印质量？\n"
+"STEP文件\n"
+"您知道吗？通过切片STEP文件而不是STL文件可以提高打印质量？\n"
 "Bambu Studio支持切片STEP文件，提供比低分辨率STL更平滑的结果。试试看！"
 
 #: resources/data/hints.ini: [hint:Z seam location]
@@ -6951,7 +6994,8 @@ msgid ""
 "paint it on your print, to have it in a less visible location? This improves "
 "the overall look of your model. Check it out!"
 msgstr ""
-"Z接缝位置\n您知道吗？您可以自定义Z接缝的位置，甚至可以将其绘制在打印上，使其位于不太可见"
+"Z接缝位置\n"
+"您知道吗？您可以自定义Z接缝的位置，甚至可以将其绘制在打印上，使其位于不太可见"
 "的位置？这样可以改善模型的整体外观。试试看！"
 
 #: resources/data/hints.ini: [hint:Fine-tuning for flow rate]
@@ -6961,7 +7005,8 @@ msgid ""
 "prints? Depending on the material, you can improve the overall finish of the "
 "printed model by doing some fine-tuning."
 msgstr ""
-"流量微调\n你知道吗？您可以微调流量，以获得更好看的打印效果吗？根据材料的不同，可以通过"
+"流量微调\n"
+"你知道吗？您可以微调流量，以获得更好看的打印效果吗？根据材料的不同，可以通过"
 "进行一些微调来提高打印模型的整体光洁度。"
 
 #: resources/data/hints.ini: [hint:Split your prints into plates]
@@ -6971,7 +7016,8 @@ msgid ""
 "individual plates ready to print? This will simplify the process of keeping "
 "track of all the parts."
 msgstr ""
-"分盘打印\n您知道吗？您可以把一个有很多零件的模型安排到多个独立的分盘，然后打印出来，这"
+"分盘打印\n"
+"您知道吗？您可以把一个有很多零件的模型安排到多个独立的分盘，然后打印出来，这"
 "将简化对所有零件的管理。"
 
 #: resources/data/hints.ini: [hint:Speed up your print with Adaptive Layer
@@ -6980,7 +7026,9 @@ msgid ""
 "Speed up your print with Adaptive Layer Height\n"
 "Did you know that you can print a model even faster, by using the Adaptive "
 "Layer Height option? Check it out!"
-msgstr "自适应层高度加速打印\n您知道吗？您可以使用“自适应层高度”选项可以更快地打印模型。试试看！"
+msgstr ""
+"自适应层高度加速打印\n"
+"您知道吗？您可以使用“自适应层高度”选项可以更快地打印模型。试试看！"
 
 #: resources/data/hints.ini: [hint:Support painting]
 msgid ""
@@ -6989,7 +7037,8 @@ msgid ""
 "makes it easy to place the support material only on the sections of the "
 "model that actually need it."
 msgstr ""
-"绘制支撑\n您知道吗？您可以手动绘制添加/屏蔽支撑的位置，此功能使仅将支撑材料放置在实际需"
+"绘制支撑\n"
+"您知道吗？您可以手动绘制添加/屏蔽支撑的位置，此功能使仅将支撑材料放置在实际需"
 "要的模型截面上变得容易。"
 
 #: resources/data/hints.ini: [hint:Different types of supports]
@@ -6999,7 +7048,8 @@ msgid ""
 "supports work great for organic models, while saving filament and improving "
 "print speed. Check them out!"
 msgstr ""
-"支撑类型\n您知道吗？有多种可选的支撑类型，树状支撑非常适合人物/动物模型，同时可以节耗材"
+"支撑类型\n"
+"您知道吗？有多种可选的支撑类型，树状支撑非常适合人物/动物模型，同时可以节耗材"
 "并提高打印速度。试试看！"
 
 #: resources/data/hints.ini: [hint:Printing Silk Filament]
@@ -7009,7 +7059,8 @@ msgid ""
 "successfully? Higher temperature and lower speed are always recommended for "
 "the best results."
 msgstr ""
-"打印丝绸耗材\n你知道丝绸耗材需要特别考虑才能成功打印吗？为了获得最佳效果，通常建议使用较高"
+"打印丝绸耗材\n"
+"你知道丝绸耗材需要特别考虑才能成功打印吗？为了获得最佳效果，通常建议使用较高"
 "的温度和较低的速度。"
 
 #: resources/data/hints.ini: [hint:Brim for better adhesion]
@@ -7017,14 +7068,18 @@ msgid ""
 "Brim for better adhesion\n"
 "Did you know that when printing models have a small contact interface with "
 "the printing surface, it's recommended to use a brim?"
-msgstr "使用Brim\n您知道吗？当模型与热床表面的接触面积较小时，建议使用brim以提高打印成功率。"
+msgstr ""
+"使用Brim\n"
+"您知道吗？当模型与热床表面的接触面积较小时，建议使用brim以提高打印成功率。"
 
 #: resources/data/hints.ini: [hint:Set parameters for multiple objects]
 msgid ""
 "Set parameters for multiple objects\n"
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
-msgstr "为多个对象设置参数\n您知道可以同时为所有选定对象设置切片参数吗？"
+msgstr ""
+"为多个对象设置参数\n"
+"您知道可以同时为所有选定对象设置切片参数吗？"
 
 #~ msgid "Erase painting"
 #~ msgstr "擦除绘制"
